# HotSpotter

./: CMakeLists.txt  README.md
client/: .gitignore  CMakeLists.txt  hot_spotter.cpp
client/src/: globals.hpp  hot_spotter.cpp  hot_spotter.hpp  library.cpp
client/src/attacher/: Attacher.hpp
client/src/attacher/impl/: LinuxAttacher.cpp  WindowsAttacher.cpp
client/src/capabilities/: capabilities.cpp  capabilities.hpp
client/src/class_dumper/: class_dumper.cpp  class_dumper.hpp
client/src/gui/: MainWindow.cpp  MainWindow.hpp  Window.hpp
client/src/gui/components/: FileTree.hpp
client/src/hooks/: hooks.cpp  hooks.hpp
client/src/logger/: logger.hpp  logger.inl
client/src/logger/impl/: logger_linux.cpp  logger_windows.cpp
client/src/platform/: dllmain.cpp  library.cpp  windows_utils.h
client/src/utils/: ProgramState.cpp  ProgramState.h
injector/: CMakeLists.txt  main.cpp
injector/injector/: AbstractInjector.hpp
injector/injector/impl/: LinuxInjector.cpp
